--- a/metroque/index.html
+++ b/metroque/index.html
@@ -61,11 +61,11 @@
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
                       <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
-                      <li class="scroll-to-section"><a href="#services">Services</a></li>
-                      <li class="scroll-to-section"><a href="#courses">Courses</a></li>
-                      <li class="scroll-to-section"><a href="#team">Team</a></li>
-                      <li class="scroll-to-section"><a href="#events">Events</a></li>
-                      <li class="scroll-to-section"><a href="#contact">Register Now!</a></li>
+                      <li class="scroll-to-section"><a href="#services">Serviços</a></li>
+                      <li class="scroll-to-section"><a href="#courses">Cursos</a></li>
+                      <li class="scroll-to-section"><a href="#team">Time</a></li>
+                      <li class="scroll-to-section"><a href="#events">Alimentos</a></li>
+                      <li class="scroll-to-section"><a href="#contact">Contate nos</a></li>
                   </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -85,46 +85,42 @@
           <div class="owl-carousel owl-banner">
             <div class="item item-1">
               <div class="header-text">
-                <span class="category">Dietas recomendadas</span>
-                <h2>With Scholar Teachers, Everything Is Easier</h2>
-                <p>Scholar is free CSS template designed by TemplateMo for online educational related websites. This layout is based on the famous Bootstrap v5.3.0 framework.</p>
+                <span class="category">Portifolio</span>
+                <h2>Juliana Castro</h2>
+                <p</p>
                 <div class="buttons">
                   <div class="main-button">
                     <a href="#">Observar</a>
                   </div>
                   <div class="icon-button">
-                    <a href="#"><i class="fa fa-play"></i> What's Scholar?</a>
+                    <a href="#"><i class="fa fa-play"></i> Ver demo </a>
                   </div>
                 </div>
               </div>
             </div>
             <div class="item item-2">
               <div class="header-text">
-                <span class="category">Mais sobre mim</span>
-                <h2>Get the best result out of your effort</h2>
-                <p>You are allowed to use this template for any educational or commercial purpose. You are not allowed to re-distribute the template ZIP file on any other website.</p>
+                <span class="category">Mais sobre Juliana</span>
+                <h2>Informações</h2>
+                <p>Nutricionista formada pela Unisalesiano Lins, com experiência na área da saúde em mais de 15 anos, atuando como Enfermeira na Atenção Básica a Saúde e Mestranda no Universidade "Júlio de Mesquita Filho" Botucatu.</p>
                 <div class="buttons">
                   <div class="main-button">
                     <a href="#">Observar</a>
                   </div>
-                  <div class="icon-button">
-                    <a href="#"><i class="fa fa-play"></i> What's the best result?</a>
-                  </div>
+                
                 </div>
               </div>
             </div>
             <div class="item item-3">
               <div class="header-text">
-                <span class="category">Sobre a Clinica </span>
-                <h2>Online Learning helps you save the time</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod temporious incididunt ut labore et dolore magna aliqua suspendisse.</p>
+                <span class="category">Documentação</span>
+                <h2>Documentação do me troque</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, fugit nesciunt accusantium rerum quas eveniet laudantium sed aliquid vero nulla nemo harum consectetur voluptates cumque inventore eos doloremque iure. Consectetur.</p>
                 <div class="buttons">
                   <div class="main-button">
                     <a href="#">Observar</a>
                   </div>
-                  <div class="icon-button">
-                    <a href="#"><i class="fa fa-play"></i> What's Online Course?</a>
-                  </div>
+                 
                 </div>
               </div>
             </div>
@@ -144,7 +140,7 @@
             </div>
             <div class="main-content">
               <h4>Online Degrees</h4>
-              <p>Whenever you need free templates in HTML CSS, you just remember TemplateMo website.</p>
+              <p>Whenever you need free templates in HTML CSS, you just remember  website.</p>
               <div class="main-button">
                 <a href="#">Read More</a>
               </div>
@@ -172,7 +168,7 @@
             </div>
             <div class="main-content">
               <h4>Web Experts</h4>
-              <p>You can start learning HTML CSS by modifying free templates from our website too.</p>
+              <p>You can start learning HTML CSS by modifying free  from our website too.</p>
               <div class="main-button">
                 <a href="#">Read More</a>
               </div>
@@ -282,7 +278,7 @@
             <div class="thumb">
               <a href="#"><img src="assets/images/pexels-jane-doan-1092730.jpg" alt=""></a>
               <span class="category">Recentes</span>
-              <span class="price"><h6><em>$</em>160</h6></span>
+              <span class="price"><h6>#<em></em>1</h6></span>
             </div>
             <div class="down-content">
               <span class="author">Stella Blair</span>
@@ -295,7 +291,7 @@
             <div class="thumb">
               <a href="#"><img src="assets/images/pexels-jane-doan-1099680.jpg" alt=""></a>
               <span class="category">Populares</span>
-              <span class="price"><h6><em>$</em>340</h6></span>
+              <span class="price"><h6><em>#</em>1</h6></span>
             </div>
             <div class="down-content">
               <span class="author">Cindy Walker</span>
@@ -308,7 +304,7 @@
             <div class="thumb">
               <a href="#"><img src="assets/images/pexels-jane-doan-793785.jpg" alt=""></a>
               <span class="category">Em alta</span>
-              <span class="price"><h6><em>$</em>640</h6></span>
+              <span class="price"><h6><em>#</em>1</h6></span>
             </div>
             <div class="down-content">
               <span class="author">David Hutson</span>
@@ -321,7 +317,7 @@
             <div class="thumb">
               <a href="#"><img src="assets/images/pexels-jane-doan-1099680.jpg" alt=""></a>
               <span class="category">Em alta</span>
-              <span class="price"><h6><em>$</em>450</h6></span>
+              <span class="price"><h6><em>#</em>2</h6></span>
             </div>
             <div class="down-content">
               <span class="author">Stella Blair</span>
@@ -334,7 +330,7 @@
             <div class="thumb">
               <a href="#"><img src="assets/images/pexels-jane-doan-1092730.jpg" alt=""></a>
               <span class="category">Populares</span>
-              <span class="price"><h6><em>$</em>320</h6></span>
+              <span class="price"><h6><em>#</em>2</h6></span>
             </div>
             <div class="down-content">
               <span class="author">Sophia Rose</span>
@@ -347,7 +343,7 @@
             <div class="thumb">
               <a href="#"><img src="assets/images/pexels-jane-doan-793785.jpg" alt=""></a>
               <span class="category">Recentes</span>
-              <span class="price"><h6><em>$</em>240</h6></span>
+              <span class="price"><h6><em>#</em>2</h6></span>
             </div>
             <div class="down-content">
               <span class="author">David Hutson</span>
@@ -465,7 +461,7 @@
         <div class="col-lg-7">
           <div class="owl-carousel owl-testimonials">
             <div class="item">
-              <p>“Please tell your friends or collegues about TemplateMo website. Anyone can access the website to download free templates. Thank you for visiting.”</p>
+              <p>"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde inventore ea modi soluta, assumenda hic doloribus, ratione eius odio labore praesentium consequuntur officiis expedita illo perferendis iure optio nostrum dignissimos."</p>
               <div class="author">
                 <img src="assets/images/testimonial-author.jpg" alt="">
                 <span class="category">Full Stack Master</span>
@@ -473,7 +469,7 @@
               </div>
             </div>
             <div class="item">
-              <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravid.”</p>
+              <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet minus beatae corrupti ipsa neque aliquid blanditiis autem dolore commodi facilis placeat reiciendis sapiente suscipit dicta quos vel, vitae pariatur odio."</p>
               <div class="author">
                 <img src="assets/images/testimonial-author.jpg" alt="">
                 <span class="category">UI Expert</span>
@@ -481,7 +477,7 @@
               </div>
             </div>
             <div class="item">
-              <p>“Scholar is free website template provided by TemplateMo for educational related websites. This CSS layout is based on Bootstrap v5.3.0 framework.”</p>
+              <p>"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia, exercitationem at architecto itaque blanditiis, maxime mollitia facilis eveniet consequatur aspernatur excepturi velit optio inventore quibusdam quo nobis. Rem, sunt reiciendis?"</p>
               <div class="author">
                 <img src="assets/images/testimonial-author.jpg" alt="">
                 <span class="category">Digital Animator</span>
@@ -501,13 +497,23 @@
     </div>
   </div>
 
+
+
+
+
+
+
+
+
+  <!-- EVENTOSSSSSSSSSSS MAS Q NÃO É EVENTOSSSSSSSSSSSSS-->
+
   <div class="section events" id="events">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
           <div class="section-heading">
-            <h6>Schedule</h6>
-            <h2>Upcoming Events</h2>
+            <h6>Destaques da Semana</h6>
+            <h2>Alimentos que recomendamos</h2>
           </div>
         </div>
         <div class="col-lg-12 col-md-6">
@@ -515,26 +521,26 @@
             <div class="row">
               <div class="col-lg-3">
                 <div class="image">
-                  <img src="assets/images/event-01.jpg" alt="">
+                  <img src="assets/images/batata.jpg" alt="">
                 </div>
               </div>
               <div class="col-lg-9">
                 <ul>
                   <li>
-                    <span class="category">Web Design</span>
-                    <h4>UI Best Practices</h4>
+                    <span class="category">Informações</span>
+                    <h4>Batata Doce</h4>
                   </li>
                   <li>
-                    <span>Date:</span>
-                    <h6>16 Feb 2036</h6>
+                    <span>Proteínas:</span>
+                    <h6>1,57g</h6>
                   </li>
                   <li>
-                    <span>Duration:</span>
-                    <h6>22 Hours</h6>
+                    <span>Lípidios:</span>
+                    <h6>0,32g</h6>
                   </li>
                   <li>
-                    <span>Price:</span>
-                    <h6>$120</h6>
+                    <span>Carboidratos:</span>
+                    <h6>20,12g</h6>
                   </li>
                 </ul>
                 <a href="#"><i class="fa fa-angle-right"></i></a>
@@ -547,26 +553,26 @@
             <div class="row">
               <div class="col-lg-3">
                 <div class="image">
-                  <img src="assets/images/event-02.jpg" alt="">
+                  <img src="assets/images/morango.jpg" alt="">
                 </div>
               </div>
               <div class="col-lg-9">
                 <ul>
                   <li>
-                    <span class="category">Front End</span>
-                    <h4>New Design Trend</h4>
+                    <span class="category">Informações</span>
+                    <h4>Morango</h4>
                   </li>
                   <li>
-                    <span>Date:</span>
-                    <h6>24 Feb 2036</h6>
+                    <span>Proteínas:</span>
+                    <h6>0.67 g</h6>
                   </li>
                   <li>
-                    <span>Duration:</span>
-                    <h6>30 Hours</h6>
+                    <span>Lipídios:</span>
+                    <h6>	0,3g</h6>
                   </li>
                   <li>
-                    <span>Price:</span>
-                    <h6>$320</h6>
+                    <span>Carboidratos:</span>
+                    <h6>7.68 g</h6>
                   </li>
                 </ul>
                 <a href="#"><i class="fa fa-angle-right"></i></a>
@@ -579,26 +585,26 @@
             <div class="row">
               <div class="col-lg-3">
                 <div class="image">
-                  <img src="assets/images/event-03.jpg" alt="">
+                  <img src="assets/images/couve-flor.jpg" alt="">
                 </div>
               </div>
               <div class="col-lg-9">
                 <ul>
                   <li>
-                    <span class="category">Full Stack</span>
-                    <h4>Web Programming</h4>
+                    <span class="category">Informações</span>
+                    <h4>Couve-Flor</h4>
                   </li>
                   <li>
-                    <span>Date:</span>
-                    <h6>12 Mar 2036</h6>
+                    <span>Proteínas:</span>
+                    <h6>1,9g</h6>
                   </li>
                   <li>
-                    <span>Duration:</span>
-                    <h6>48 Hours</h6>
+                    <span>Lipídios:</span>
+                    <h6>0,2g</h6>
                   </li>
                   <li>
-                    <span>Price:</span>
-                    <h6>$440</h6>
+                    <span>Carboidratos:</span>
+                    <h6>	4,5g</h6>
                   </li>
                 </ul>
                 <a href="#"><i class="fa fa-angle-right"></i></a>
