--- a/metroque/index.html
+++ b/metroque/index.html
@@ -90,7 +90,7 @@
                 <p</p>
                 <div class="buttons">
                   <div class="main-button">
-                    <a href="#">Observar</a>
+                    <a href="portifoli_juliana - Copia/index.html">Observar</a>
                   </div>
                   <div class="icon-button">
                     <a href="#"><i class="fa fa-play"></i> Ver demo </a>
@@ -105,7 +105,7 @@
                 <p>Nutricionista formada pela Unisalesiano Lins, com experiência na área da saúde em mais de 15 anos, atuando como Enfermeira na Atenção Básica a Saúde e Mestranda no Universidade "Júlio de Mesquita Filho" Botucatu.</p>
                 <div class="buttons">
                   <div class="main-button">
-                    <a href="#">Observar</a>
+                    <a href="portifoli_juliana - Copia/index.html">Observar</a>
                   </div>
                 
                 </div>
@@ -118,7 +118,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, fugit nesciunt accusantium rerum quas eveniet laudantium sed aliquid vero nulla nemo harum consectetur voluptates cumque inventore eos doloremque iure. Consectetur.</p>
                 <div class="buttons">
                   <div class="main-button">
-                    <a href="#">Observar</a>
+                    <a href="portifoli_juliana - Copia/index.html">Observar</a>
                   </div>
                  
                 </div>
@@ -139,7 +139,7 @@
               <img src="assets/images/service-01.png" alt="online degrees">
             </div>
             <div class="main-content">
-              <h4>Online Degrees</h4>
+              <h4>Lorem ipsum dolor</h4>
               <p>Whenever you need free templates in HTML CSS, you just remember  website.</p>
               <div class="main-button">
                 <a href="#">Read More</a>
@@ -153,7 +153,7 @@
               <img src="assets/images/service-02.png" alt="short courses">
             </div>
             <div class="main-content">
-              <h4>Short Courses</h4>
+              <h4>Lorem ipsum dolor</h4>
               <p>You can browse free templates based on different tags such as digital marketing, etc.</p>
               <div class="main-button">
                 <a href="#">Read More</a>
@@ -167,7 +167,7 @@
               <img src="assets/images/service-03.png" alt="web experts">
             </div>
             <div class="main-content">
-              <h4>Web Experts</h4>
+              <h4>Lorem ipsum dolor</h4>
               <p>You can start learning HTML CSS by modifying free  from our website too.</p>
               <div class="main-button">
                 <a href="#">Read More</a>
@@ -178,7 +178,7 @@
       </div>
     </div>
   </div>
-
+<!--PARTE DAS INFORMAÇÕES QUE APARECEM QUANDO CLICA EM + LÁ-->
   <div class="section about-us">
     <div class="container">
       <div class="row">
@@ -192,7 +192,7 @@
               </h2>
               <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  Dolor <strong>almesit amet</strong>, consectetur adipiscing elit, sed doesn't eiusmod tempor incididunt ut labore consectetur <code>adipiscing</code> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+                  Dolor <strong>almesit amet</strong>, consectetur adipiscing elit, sed doesn't eiusmod tempor incididunt ut labore consectetur  elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
                 </div>
               </div>
             </div>
@@ -204,7 +204,7 @@
               </h2>
               <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  Dolor <strong>almesit amet</strong>, consectetur adipiscing elit, sed doesn't eiusmod tempor incididunt ut labore consectetur <code>adipiscing</code> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+                  Dolor <strong>almesit amet</strong>, consectetur adipiscing elit, sed doesn't eiusmod tempor incididunt ut labore consectetur  elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
                 </div>
               </div>
             </div>
@@ -228,7 +228,7 @@
               </h2>
               <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  You can also search on Google with specific keywords such as <code>templatemo business templates, templatemo gallery templates, admin dashboard templatemo, 3-column templatemo, etc.</code>
+                  You can also search on Google with specific keywords such as
                 </div>
               </div>
             </div>
@@ -281,8 +281,8 @@
               <span class="price"><h6>#<em></em>1</h6></span>
             </div>
             <div class="down-content">
-              <span class="author">Stella Blair</span>
-              <h4>Learn Web Design</h4>
+              <span class="author">Juliana Castro</span>
+              <h4>Nutricionista</h4>
             </div>
           </div>
         </div>
@@ -294,8 +294,8 @@
               <span class="price"><h6><em>#</em>1</h6></span>
             </div>
             <div class="down-content">
-              <span class="author">Cindy Walker</span>
-              <h4>Web Development Tips</h4>
+              <span class="author">Juliana Castro</span>
+              <h4>Nutricionista</h4>
             </div>
           </div>
         </div>
@@ -307,8 +307,8 @@
               <span class="price"><h6><em>#</em>1</h6></span>
             </div>
             <div class="down-content">
-              <span class="author">David Hutson</span>
-              <h4>Latest Web Trends</h4>
+              <span class="author">Juliana Castro</span>
+              <h4>Nutricionista</h4>
             </div>
           </div>
         </div>
@@ -320,8 +320,8 @@
               <span class="price"><h6><em>#</em>2</h6></span>
             </div>
             <div class="down-content">
-              <span class="author">Stella Blair</span>
-              <h4>Online Learning Steps</h4>
+              <span class="author">Juliana Castro</span>
+              <h4>Nutricionista</h4>
             </div>
           </div>
         </div>
@@ -333,8 +333,8 @@
               <span class="price"><h6><em>#</em>2</h6></span>
             </div>
             <div class="down-content">
-              <span class="author">Sophia Rose</span>
-              <h4>Be a WordPress Master</h4>
+              <span class="author">Juliana Castro</span>
+              <h4>Nutricionista</h4>
             </div>
           </div>
         </div>
@@ -346,8 +346,8 @@
               <span class="price"><h6><em>#</em>2</h6></span>
             </div>
             <div class="down-content">
-              <span class="author">David Hutson</span>
-              <h4>Full Stack Developer</h4>
+              <span class="author">Juliana Castro</span>
+              <h4>Nutricionista</h4>
             </div>
           </div>
         </div>
@@ -413,8 +413,8 @@
           <div class="team-member">
             <div class="main-content">
               <img src="assets/images/member-02.jpg" alt="">
-              <span class="category">Dev Full Stack</span>
-              <h4>Adriano Castro</h4>
+              <span class="category">Dev Front-end</span>
+              <h4>Maria Julia</h4>
               <ul class="social-icons">
                 <li><a href="#"><i class="fab fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -427,8 +427,8 @@
           <div class="team-member">
             <div class="main-content">
               <img src="assets/images/member-03.jpg" alt="">
-              <span class="category">Full Stack Master</span>
-              <h4>David Hutson</h4>
+              <span class="category">Dev back-end</span>
+              <h4>vinicius costa</h4>
               <ul class="social-icons">
                 <li><a href="#"><i class="fab fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -441,8 +441,8 @@
           <div class="team-member">
             <div class="main-content">
               <img src="assets/images/member-04.jpg" alt="">
-              <span class="category">Digital Animator</span>
-              <h4>Stella Blair</h4>
+              <span class="category">Dev Front-end</span>
+              <h4>Raphaela </h4>
               <ul class="social-icons">
                 <li><a href="#"><i class="fab fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -465,7 +465,7 @@
               <div class="author">
                 <img src="assets/images/testimonial-author.jpg" alt="">
                 <span class="category">Full Stack Master</span>
-                <h4>Claude David</h4>
+                <h4>Jairo</h4>
               </div>
             </div>
             <div class="item">
@@ -473,7 +473,7 @@
               <div class="author">
                 <img src="assets/images/testimonial-author.jpg" alt="">
                 <span class="category">UI Expert</span>
-                <h4>Thomas Jefferson</h4>
+                <h4>Natalia Harumi</h4>
               </div>
             </div>
             <div class="item">
@@ -481,7 +481,7 @@
               <div class="author">
                 <img src="assets/images/testimonial-author.jpg" alt="">
                 <span class="category">Digital Animator</span>
-                <h4>Stella Blair</h4>
+                <h4>Marcelo césar</h4>
               </div>
             </div>
           </div>
@@ -626,11 +626,11 @@
           <div class="section-heading">
             <h6>Contate Nos</h6>
             <h2>Entre em contato <br>com a nossa equipe</h2>
-            <p>Thank you for choosing our templates. We provide you best CSS templates at absolutely 100% free of charge. You may support us by sharing our website to your friends.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, consectetur iusto ab doloribus imp.</p>
             <div class="special-offer">
               <span class="offer">off<br><em>50%</em></span>
-              <h6>Valide: <em>24 April 2036</em></h6>
-              <h4>Special Offer <em>50%</em> OFF!</h4>
+              <h6>Valido até: <em>24 Abril 2036</em></h6>
+              <h4>Oferta especial <em>50%</em> OFF!</h4>
               <a href="#"><i class="fa fa-angle-right"></i></a>
             </div>
           </div>
@@ -641,22 +641,22 @@
               <div class="row">
                 <div class="col-lg-12">
                   <fieldset>
-                    <input type="name" name="name" id="name" placeholder="Your Name..." autocomplete="on" required>
+                    <input type="name" name="name" id="name" placeholder="Seu Nome..." autocomplete="on" required>
                   </fieldset>
                 </div>
                 <div class="col-lg-12">
                   <fieldset>
-                    <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your E-mail..." required="">
+                    <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Seu E-mail..." required="">
                   </fieldset>
                 </div>
                 <div class="col-lg-12">
                   <fieldset>
-                    <textarea name="message" id="message" placeholder="Your Message"></textarea>
+                    <textarea name="message" id="message" placeholder="Sua mensagem aqui..."></textarea>
                   </fieldset>
                 </div>
                 <div class="col-lg-12">
                   <fieldset>
-                    <button type="submit" id="form-submit" class="orange-button">Send Message Now</button>
+                    <button type="submit" id="form-submit" class="orange-button">Enviar</button>
                   </fieldset>
                 </div>
               </div>
