--- a/metroque/index.html
+++ b/metroque/index.html
@@ -81,8 +81,8 @@
   <div class="main-banner" id="top">
 
 <div class="cont"> 
-    <button type="button" class="btn btn-primary btn-lg btn-block">Entrar</button>
-    <button type="button" class="btn btn-secondary btn-lg btn-block">Login</button>
+    <button type="button" class="btn btn-lg btn-block">Entrar</button>
+    <button type="button" class="btn  btn-lg btn-block">Login</button>
     </div>
 
     <div class="container">
@@ -96,7 +96,7 @@
                 <p</p>
                 <div class="buttons">
                   <div class="main-button">
-                    <a href="portifoli_juliana - Copia/index.html">Observar</a>
+                    <a href="portifoli_juliana - Copia/portifoli_juliana-master/index.html">Observar</a>
                   </div>
                   <div class="icon-button">
                     <a href="#"><i class="fa fa-play"></i> Ver demo </a>
