página de login (inacabada)

--- a/metroque/index.html
+++ b/metroque/index.html
@@ -77,8 +77,21 @@
   <div class="main-banner" id="top">
 
 <div class="cont"> 
-    <button type="button" class="btn btn-lg btn-block">Entrar</button>
-    <button type="button" class="btn  btn-lg btn-block">Login</button>
+   <!-- <button type="button" class="btn btn-lg btn-block"> 
+      <a href="/metroque/login/login.html">Entrar</a>
+    </button>  --> 
+
+    <div class="main-button">
+      <a href="/metroque/login/login.html">Login</a>
+    </div>
+
+    <div class="main-button">
+      <a href="/metroque/login/login.html">Observar</a>
+    </div>
+
+ <!--  <button type="button" class="btn  btn-lg btn-block"> 
+      <a href="/metroque/login/login.html">Login</a> 
+    </button> -->  
     </div>
 
     <div class="container">
